<?xml version="1.0"?>
<package>
  <name>unimotorDrone</name>
  <version>1.0.0</version>
  <description>UniMotor Unmanned Aerial Vehicle package.</description>
  <license>GPLv2</license>

  <maintainer email="gerardoberni19@gmail.com">v01d</maintainer>
  <author email="gerardoberni19@gmail.com">v01d</author>

    <!-- Standard Dependencies -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
